samples/_failures_safe/1761653732_ca1a61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cf194fb.c: In function ‘main’:
./samples/SAFE/__tmp_3cf194fb.c:146:22: error: ‘calculate_determin’ undeclared (first use in this function); did you mean ‘calculate_determinant’?
  146 |         double det = calculate_determin
      |                      ^~~~~~~~~~~~~~~~~~
      |                      calculate_determinant
./samples/SAFE/__tmp_3cf194fb.c:146:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3cf194fb.c:146:9: error: expected ‘,’ or ‘;’ at end of input
  146 |         double det = calculate_determin
      |         ^~~~~~
./samples/SAFE/__tmp_3cf194fb.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cf194fb.c:146:9: error: expected declaration or statement at end of input
